<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/eBooks"
        android:title="@string/e_books"
        android:icon="@drawable/ic_ebook"/>
    <item
        android:id="@+id/theme"
        android:title="@string/theme"
        android:icon="@drawable/ic_theme"/>
    <item
        android:id="@+id/website"
        android:title="@string/website"
        android:icon="@drawable/ic_website"/>
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"/>
    <item
        android:id="@+id/review"
        android:title="@string/rate_us"
        android:icon="@drawable/ic_review"/>
    <item
        android:id="@+id/developer"
        android:title="@string/developer_information"
        android:icon="@drawable/ic_developer"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"/>
</menu>