<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeveloperInformation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="160sp"
            android:layout_height="160sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="108sp"
            android:src="@drawable/myimage" />

        <TextView
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@string/bold"
            android:layout_marginHorizontal="8dp"
            android:gravity="center"
            android:padding="4sp"
            android:text="@string/himanshu_mishra"
            android:textColor="@color/textColor"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/devMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/regular"
            android:layout_marginHorizontal="16dp"
            android:padding="6dp"
            android:autoLink="email"
            android:gravity="center"
            android:text="@string/mishrahimanshu2000_gmail_com"
            android:textColor="@color/textColor"
            android:textSize="@dimen/title_size2" />

        <TextView
            android:id="@+id/devPhone"
            android:autoLink="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/regular"
            android:padding="6dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/_919118855553"
            android:textColor="@color/textColor"
            android:textSize="@dimen/title_size2" />

        <TextView
            android:id="@+id/devSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@string/regular"
            android:padding="6dp"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/linkedin"
            android:textColor="@color/textColor"
            android:textSize="@dimen/title_size" />

    </LinearLayout>

</FrameLayout>