<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/sliderView"
                android:layout_width="match_parent"
                android:layout_height="250sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/the_rit_tale"
                android:textColor="@color/textColor"
                android:textSize="@dimen/title_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_margin"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/textColor"
                android:text="@string/text_RIT1"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/dark">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/departments"
                        android:textColor="@color/white"
                        android:textSize="@dimen/title_size"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@font/poppins_light"
                                android:textColor="@color/textColor"
                                android:text="@string/computer_science"
                                android:layout_margin="8dp"
                                android:textSize="@dimen/text_size" />
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/gray1"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@font/poppins_light"
                                android:textColor="@color/textColor"
                                android:text="@string/electronics_and_communication"
                                android:layout_margin="8dp"
                                android:textSize="@dimen/text_size" />
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/gray1"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@font/poppins_light"
                                android:textColor="@color/textColor"
                                android:text="@string/mechanical"
                                android:layout_margin="8dp"
                                android:textSize="@dimen/text_size" />
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/gray1"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@font/poppins_light"
                                android:textColor="@color/textColor"
                                android:text="@string/civil_engineering"
                                android:layout_margin="8dp"
                                android:textSize="@dimen/text_size" />
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/gray1"/>



                        </LinearLayout>



                    </com.google.android.material.card.MaterialCardView>



                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/contact_details"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/title_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/textColor"
                    android:text="@string/_8th_km_dehradun_road_puhana_roorkee_247_667_dehradun_uttarakhand_india"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="8dp"
                    android:text="@string/info_ritroorkee_in_ritroorkee_gmail_com"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="8dp"
                    android:text="@string/_91_1332_234036_38_91_1332_234035_91_9927099210_9927099219"
                    android:textSize="@dimen/text_size" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:id="@+id/map"
                    android:layout_height="320dp"
                    android:src="@drawable/mapimg"
                    android:scaleType="fitXY"/>





            </LinearLayout>

            


        </LinearLayout>

    </ScrollView>

</FrameLayout>