<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Faculty.FacultyFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/computer_science"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#c1c1c1"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/csDepartment"
                android:visibility="gone"
                android:nestedScrollingEnabled="false"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/csNoData">
                <include layout="@layout/no_data_found_layout"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mechanical_engineering"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#c1c1c1"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/meDepartment"
                android:visibility="gone"
                android:nestedScrollingEnabled="false"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/meNoData">
                <include layout="@layout/no_data_found_layout"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ece_ee"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#c1c1c1"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eeDepartment"
                android:visibility="gone"
                android:nestedScrollingEnabled="false"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/eeNoData">
                <include layout="@layout/no_data_found_layout"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/civil_engineering"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#c1c1c1"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ceDepartment"
                android:visibility="gone"
                android:nestedScrollingEnabled="false"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ceNoData">
                <include layout="@layout/no_data_found_layout"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humanities"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#c1c1c1"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/humDepartment"
                android:visibility="gone"
                android:nestedScrollingEnabled="false"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/humNoData">
                <include layout="@layout/no_data_found_layout"/>
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>